--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -214,6 +214,12 @@ h1.quotes {
     font-family: 'Alegreya Sans SC', sans-serif;
     font-weight: 400;
 }
+.digital {
+    @font-face {
+        font-family: 'digital-7';     
+        src: url('../fonts/digital-7.ttf');
+     }
+}
 
 
 .lead {
