--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -2876,13 +2876,14 @@ body.off-canvas-cart-open:after {
 }
 
 .inner-nav > li > a {
-    text-transform: uppercase;
+   /* text-transform: uppercase;*/
     letter-spacing: 2px;
     line-height: 20px;
-    font-weight: 600;
-    font-size: 14px;
+    font-weight: 400;
+    font-size: 18px;
     display: block;
     padding: 33px 15px;
+    font-family: serif;
 }
 
 /* Submenu */
@@ -2896,14 +2897,16 @@ body.off-canvas-cart-open:after {
 
 .submenu {
     position: absolute;
-    background: #222222;
+    background: #fff;
     padding: 0;
     min-width: 180px;
-    opacity: 0;
+    opacity: 1;
+    font-family: serif;
     z-index: 1030;
     visibility: hidden;
     text-align: left;
-    font-size: 13px;
+    font-size: 16px;
+    border-radius: 0% 0% 10% 10%;
 }
 
 .submenu-open > .submenu {
@@ -2956,9 +2959,11 @@ body.off-canvas-cart-open:after {
 .submenu li a {
     position: relative;
     display: block;
+
     line-height: 1.4;
     padding: 12px 27px 12px 20px;
-    border-bottom: 1px solid rgba(51, 51, 51, 0.5);
+
+    /*border-bottom: 1px solid rgba(51, 51, 51, 0.5);*/
 }
 
 .submenu li:last-child > a {
@@ -2992,29 +2997,29 @@ body.off-canvas-cart-open:after {
 }
 
 .inner-nav > li > a.active {
-    color: #222222;
+    color: #008eca;
 }
 
 .inner-nav > li > a:hover,
 .inner-nav > li > a:focus,
 .inner-nav > li.submenu-open > a {
-    color: #222222;
+    color: #a1a1a1;
 }
 
 .submenu li > a {
-    color: rgba(255, 255, 255, 0.5);
+    color: #a1a1a1;
     -webkit-transition: all 0.3s ease-out;
             transition: all 0.3s ease-out;
 }
 
 .submenu-title {
-    color: #ffffff;
+    color: #a1a1a1;
 }
 
 .submenu li > a:hover,
 .submenu li > a:focus,
 .submenu li.submenu-open > a {
-    background: rgba(51, 51, 51, 0.5);
+    background: rgba(0, 142, 202, 0.5);
     color: #ffffff;
 }
 
