--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -654,7 +654,7 @@ hr {
 }
 
 .progress-bar.progress-bar-info {
-    background-color: #5bc0de;
+    background-color: #008eca;
 }
 
 .progress-bar.progress-bar-warning {
@@ -1082,9 +1082,9 @@ table th {
 
 .btn.btn-white:hover,
 .btn.btn-white:focus {
-    background-color: #008eca;
-    border-color: #f2f2f2;
-    opacity: 0.7;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-color: #008eca;
+    opacity: 1;
     color: #fff;
 
 }
