--- a/assets/css/flexslider.css
+++ b/assets/css/flexslider.css
@@ -96,7 +96,7 @@ html[xmlns] .flexslider .slides {
 
 .flex-nav-prev,
 .flex-nav-next {
-	position: absolute;
+	/*position: absolute;*/
 	z-index: 10;
 	top: 50%;
 	left: 0;
