--- a/assets/css/flexslider.css
+++ b/assets/css/flexslider.css
@@ -97,7 +97,7 @@ html[xmlns] .flexslider .slides {
 .flex-nav-prev,
 .flex-nav-next {
 	/*position: absolute;*/
-	z-index: 10;
+	/*z-index: 10;*/
 	top: 50%;
 	left: 0;
 	margin-top: -10px;
