--- a/assets/css/flexslider.css
+++ b/assets/css/flexslider.css
@@ -96,11 +96,11 @@ html[xmlns] .flexslider .slides {
 
 .flex-nav-prev,
 .flex-nav-next {
-	/*position: absolute;*/
-	/*z-index: 10;*/
+	/*position: absolute;
+	z-index: 10;
 	top: 50%;
 	left: 0;
-	margin-top: -10px;
+	margin-top: -10px;*/
 }
 
 .flex-nav-next {
