--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -884,6 +884,14 @@ table th {
     padding: 15px 75px;
     font-size: 35px;
 }
+.btn-insidewhitebg {
+   padding: 15px 75px;
+    font-size: 35px;
+    font-weight: 100 !important;
+    border-width: 2px !important;
+    border-color: #000000 !important;
+     
+}
 .btn-joinus {
     padding: 13px 31px;
     font-size: 40px;
@@ -918,7 +926,8 @@ table th {
     background: #fff;
     color: #333;
 }
-}
+
+
 .btn-sm {
     padding: 9px 19px 9px;
     font-size: 11px;
@@ -1919,7 +1928,10 @@ body.off-canvas-cart-open:after {
     position: relative;
     overflow: hidden;
 }
-
+./*team-photo .faiz {
+    position: 
+}
+*/
 .team-photo > img {
     width: 100%;
 }
@@ -5668,4 +5680,72 @@ address.map-background {
     0% { opacity:1; }
     50% { opacity:0; }
     100% { opacity:1; }
+}
+.demo a {
+    position: absolute;
+    bottom: 2px;
+    top: 98%;
+    left: 50%;
+    z-index: 2;
+    display: inline-block;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    color: #fff;
+    font: normal 400 20px/1 'Josefin Sans', sans-serif;
+    letter-spacing: .1em;
+    text-decoration: none;
+    transition: opacity .3s;
+}
+
+.demo a:hover {
+    opacity: .5;
+}
+
+#section05 a {
+    padding-top: 70px;
+}
+
+#section05 a span {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 24px;
+    height: 24px;
+    margin-left: -12px;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: sdb05 1.5s infinite;
+    animation: sdb05 1.5s infinite;
+    box-sizing: border-box;
+
+}
+
+@-webkit-keyframes sdb05 {
+    0% {
+        -webkit-transform: rotate(-45deg) translate(0, 0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        -webkit-transform: rotate(-45deg) translate(-20px, 20px);
+        opacity: 0;
+    }
+}
+
+@keyframes sdb05 {
+    0% {
+        transform: rotate(-45deg) translate(0, 0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        transform: rotate(-45deg) translate(-20px, 20px);
+        opacity: 0;
+    }
 }
