--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -898,7 +898,7 @@ table th {
     font-size: 13px;
 }
 .btn-education {
-    padding: 15px 75px;
+    padding: 15px 65px;
     font-size: 35px;
 }
 .btn-insidewhitebg {
@@ -909,6 +909,40 @@ table th {
     border-color: #000000 !important;
      
 }
+
+@media (max-width: 1024px) {
+    .btn-insidewhitebg {
+        padding: 5px 70px;
+        font-size: 34px;
+     
+ } 
+    
+}
+   
+@media (max-width: 767px) {
+    .btn-insidewhitebg {
+        padding: 5px 50px;
+        font-size: 34px;
+     
+ } 
+    
+}
+
+@media (max-width: 568px) {
+    .btn-insidewhitebg {
+        padding: 5px 12px;
+        font-size: 25px;
+       
+    }
+     
+ } 
+@media (max-width: 320px) {
+     .btn-insidewhitebg {
+         padding: 5px 15px;
+         font-size: 24px;
+         
+     }
+ } 
 .btn-joinus {
     padding: 13px 31px;
     font-size: 40px;
@@ -1554,7 +1588,7 @@ table th {
 .box-icon,
 .box-icon-left,
 .box-icon-right {
-    padding: 35px 0;
+    padding: 30px 0;
 }
 
 .box-icon .icon-box-icon,
@@ -1588,7 +1622,7 @@ table th {
 
 .box-icon-left {
     position: relative;
-    padding: 35px 0 35px 50px;
+    padding: 35px 0 35px 0;
 }
 
 .box-icon-left .icon-box-icon {
@@ -1622,7 +1656,7 @@ table th {
 @media (max-width: 767px) {
     .box-icon-left,
     .box-icon-right {
-        padding: 35px 0 35px 50px;
+        padding: 35px 0 35px 0px;
         text-align: left;
     }
 
@@ -5735,7 +5769,7 @@ address.map-background {
     position: absolute;
     bottom: 2px;
     top: 98%;
-    left: 50%;
+    left: 40%;
     z-index: 2;
     display: inline-block;
     -webkit-transform: translate(0, -50%);
