--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1612,8 +1612,8 @@ table th {
 .box-icon-center .icon-box-icon {
     position: absolute;
     height: 44px;
-    width: 30px;
-    center: 0;
+    width: 90%;
+    position: center;
     top: 35px;
     text-align: center;
     line-height: 40px;
@@ -1622,13 +1622,13 @@ table th {
 
 .box-icon-left {
     position: relative;
-    padding: 35px 0 35px 0;
+    padding: 30px 0 30px 0;
 }
 
 .box-icon-left .icon-box-icon {
     position: absolute;
     height: 44px;
-    width: 30px;
+    width: 90%;
     left: 0;
     top: 35px;
     text-align: center;
@@ -2764,8 +2764,8 @@ body.off-canvas-cart-open:after {
 
 .social-icons {
     list-style: none;
-    padding: 0;
-    margin: 0;
+    padding: 2px;
+    margin: 0px 5px;
 }
 
 .social-icons > li {
@@ -5831,5 +5831,33 @@ address.map-background {
     100% {
         transform: rotate(-45deg) translate(-20px, 20px);
         opacity: 0;
+    }
+}
+
+.bringthefuckingboxin {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+}
+
+@media (max-width: 991px) {
+
+    .bringthefuckingboxin {
+        padding-left: 0px !important;
+        padding-right: 0px !important;
+        margin-left: 0px !important;
+        margin-right: 0px !important;
+    }
+    
+}
+
+@media (max-width: 767px) {
+    
+    .bringthefuckingboxin {
+        padding-left: 0px !important;
+        padding-right: 0px !important;
+        margin-left: 0px !important;
+        margin-right: 0px !important;
     }
 }
