mindawakebodyasleep. Goodbye friend!

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -2,7 +2,7 @@
 
 body {
     background: #ffffff;
-    font-family: "Alegreya", Arial, serif;
+    font-family: "Open Sans", sans-serif;
     line-height: 1.7;
     font-size: 19px;
     color: #777777;
